--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,21 @@ body {
     background-color: black;
 }
 
-.container {
+div {
+    white-space: pre-wrap;
+}
+
+.app {
     width: 100%;
     display: flex;
+    flex-direction: row;
+}
+
+.container {
+    display: flex;
+    flex: 7;
     flex-direction: column;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
@@ -19,9 +29,8 @@ body {
 }
 
 .containers {
-    overflow: scroll;
     width: 100%;
-    display: flex;
+    display: grid;
     flex: 1;
     flex-direction: column;
     justify-content: center;
@@ -29,10 +38,15 @@ body {
 }
 
 .containerRow {
-    width: 100%;
     display: flex;
     flex: 1;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+}
+
+.terminal {
+    display: flex;
+    /* justify-content: space-between; */
+    flex: 3;
 }
